@@ -1,3 +1,9 @@
+2007-06-08  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixcore/editor2/core/spring/internal/PageImpl.java:
+	Fixed NullPointerException being raised when getThemes was called on a
+	page object not having a target object. 
+
 2007-06-04  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* src/de/schlund/pfixcore/editor2/frontend/util/EditorApplicationContextFactory.java (run): 
